src/Tests/Error/DirectoryNotWritableError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class DirectoryNotWritableError extends AssertError
{
}
